--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,13 @@
 @import 'bootstrap/dist/css/bootstrap';
+
+.search-area{
+  padding-top: 50px;
+}
+
+.submit-button-cls{
+  padding-left: 0;
+}
+
+.stock-results{
+  display: inline-block;
+}
