--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,11 +14,11 @@
       </li>
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown
+    Action
 </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-<a class="dropdown-item" href="#">Another action</a>
+            <%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %>
+          <a class="dropdown-item" href="#">Profile</a>
           <div class="dropdown-divider"></div>
 <a class="dropdown-item" href="#">Something else here</a>
         </div>
@@ -27,6 +27,11 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 </li>
     </ul>
+<ul class="navbar-nav ml-auto">
+    <li class="nav-item nav-link disabled">
+      <%= fa_icon 'user' %> <%= current_user.full_name %>
+    </li>
+</ul>
 <form class="form-inline my-2 my-lg-0">
 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
